Fix about page colors in dark mode.

--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -95,6 +95,10 @@
     --title-color: var(--white);
   }
 
+  .content {
+    --content-heading-color: var(--white);
+  }
+
   body {
     color: var(--text);
   }
